--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">F4</string>
+    <string name="start">Start</string>
+    <string name="pause">pause</string>
+    <string name="restart">Restart</string>
+    <string name="progress_percent">%s %%</string>
+    <string name="zero_percent">0 %</string>
 </resources>
